Redirects, various post-launch fixes. Removing old hosting pages

--- a/netlify.toml
+++ b/netlify.toml
@@ -695,6 +695,16 @@
   status = 301
 
 [[redirects]]
+  from = "/hipaa-compliant-hosting/"
+  to = "/compliant-kubernetes-service/"
+  status = 301
+
+[[redirects]]
+  from = "/hipaa-compliant-web-hosting/"
+  to = "/compliant-kubernetes-service/"
+  status = 301
+
+[[redirects]]
   from = "/azure"
   to = "/contact/azure"
   status = 301
