--- a/netlify.toml
+++ b/netlify.toml
@@ -103,9 +103,10 @@
   force = true
 
 [[redirects]]
-  from = "/platform/compliance/"
-  to = "/compliance/"
+  from = "/platform/compliance/*"
+  to = "/compliance/:splat"
   status = 301
+  force = true
 
 [[redirects]]
   from = "support.catalyze.io"
@@ -121,6 +122,7 @@
   from = "/platform/success"
   to = "/activate/success"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/success"
@@ -136,6 +138,7 @@
   from = "/platform/technology"
   to = "/compliance"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/customer/va"
