First try: positioning featured image absolute, z below article. WIP

--- a/data/nav_all.yaml
+++ b/data/nav_all.yaml
@@ -95,7 +95,7 @@
             desc: "We believe in the importance of open source."
             has_divider: true
         -
-            title: "Company Blog"
+            title: "Datica Blog"
             url: "/blog/"
             desc: "News and insights from the Datica team."
 -
