--- a/data/nav_company.yaml
+++ b/data/nav_company.yaml
@@ -8,7 +8,7 @@ nav_items:
         url: "/leadership/"
         desc: "The team guiding Datica"
     -
-        title: "Company Blog"
+        title: "Datica Blog"
         url: "/blog/"
         desc: "News and notes from the Datica team"
     -
