--- a/data/nav_all.yaml
+++ b/data/nav_all.yaml
@@ -1,20 +1,20 @@
 -
-    title: "Products"
+    title: "Compliance"
     url:
     desc:
     nav_main: true
     children:
         -
+            title: "Compliance"
+            url: "/compliance/"
+            desc: "Datica helps you become HITRUST CSF Certified"
+            nav_main: true
+            has_divider: true
+        -
             title: "Compliant Kubernetes Service"
             title_short: "Datica CKS"
             url: "/compliant-kubernetes-service/"
             desc: "Datica is a complete, enterprise cloud-native solution for regulated industries."
-            nav_main: true
-        -
-            title: "Compliant Managed Integration"
-            title_short: "Datica CMI"
-            url: "/compliant-managed-integration/"
-            desc: "The complete toolset to handle compliant, scalable, secure data exchange with any EHR or clinical system."
             nav_main: true
         -
             title: "Compliant Platform-as-a-Service"
@@ -47,21 +47,29 @@
             desc: "Talk to us for Datica pricing."
             nav_main: true
 -
-    title: "Solutions"
-    title_short: "Solutions"
+    title: "Integration"
+    title_short: "Integration"
     url: 
     desc: 
     nav_main: true
     children:
         -
-            title: "Compliance"
-            url: "/compliance/"
-            desc: "Datica is HITRUST CSF Certified"
-        -
             title: "EHR Integration"
             url: "/integration/"
             desc: "Datica handles the risk and complexity of EHR integrations, so you can focus on building solutions."
-            # has_divider: true
+            has_divider: true
+        -
+            title: "Compliant Managed Integration"
+            title_short: "Datica CMI"
+            url: "/compliant-managed-integration/"
+            desc: "The complete toolset to handle compliant, scalable, secure data exchange with any EHR or clinical system."
+            nav_main: true
+        -
+            title: "Pricing"
+            url: "/pricing/"
+            desc: "Talk to us for Datica pricing."
+            nav_main: false
+
 -
     title: "Resources"
     url:
