--- a/netlify.toml
+++ b/netlify.toml
@@ -89,7 +89,7 @@
 
 # [[redirects]]
 #   from = "/integration/"
-#   to = "/integrations/"
+#   to = "/integration/"
 #   status = 301
 
 [[redirects]]
@@ -159,12 +159,12 @@
 
 [[redirects]]
   from = "/solutions/"
-  to = "/integrations/"
+  to = "/integration/"
   status = 301
 
 [[redirects]]
   from = "/services/"
-  to = "/integrations/"
+  to = "/integration/"
   status = 301
 
 [[redirects]]
