redirect for integrations; updated default share images.

--- a/netlify.toml
+++ b/netlify.toml
@@ -168,6 +168,11 @@
   status = 301
 
 [[redirects]]
+  from = "/integrations/"
+  to = "/integration/"
+  status = 301
+
+[[redirects]]
   from = "/signup"
   to = "/contact"
   status = 301
