--- a/data/nav_all.yaml
+++ b/data/nav_all.yaml
@@ -15,18 +15,21 @@
             title_short: "Datica CKS"
             url: "/compliant-kubernetes-service/"
             desc: "Datica is a complete, enterprise cloud-native solution for regulated industries."
+            icon: "cks-logo-w"
             nav_main: true
         -
             title: "Compliant Platform-as-a-Service"
             title_short: "Datica CPaaS"
             url: "/compliant-platform-as-a-service/"
             desc: "The Compliant Cloud Platform Perfectly Designed for Early-Stage Applications."
+            icon: "cpaas-logo-w"
             nav_main: true
         -
             title: "Cloud Compliance Management System"
             title_short: "Datica CCMS"
             url: "/cloud-compliance-management-system/"
             desc: "The first-ever tool to guarantee compliance assurance of managed cloud-native services."
+            icon: "ccms-logo-w"
             nav_main: true
         # -
         #     title: "Public Roadmap"
@@ -63,6 +66,7 @@
             title_short: "Datica CMI"
             url: "/compliant-managed-integration/"
             desc: "The complete toolset to handle compliant, scalable, secure data exchange with any EHR or clinical system."
+            icon: "cmi-logo-w"
             nav_main: true
         -
             title: "Pricing"
