--- a/netlify.toml
+++ b/netlify.toml
@@ -308,6 +308,11 @@
   status = 301
 
 [[redirects]]
+  from = "/compliance/global/"
+  to = "/cloud-compliance/global/"
+  status = 301
+
+[[redirects]]
   from = "/fhir"
   to = "/discover/ehr-integrations"
   status = 301
