--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,11 @@
     <//images.ctfassets.net>;rel=dns-prefetch, \
     <//images.ctfassets.net>;rel=preconnect, \
     <//cdnjs.cloudflare.com>;rel=preconnect, \
+    <//distillery.wistia.com>;rel=preconnect, \
+    <//pipedream.wistia.com>;rel=preconnect, \
+    <//s.ytimg.com>;rel=preconnect, \
+    <//connect.facebook.net>;rel=preconnect, \
+    <//www.googletagmanager.com>;rel=preconnect, \
     <//fast.wistia.com>;rel=preconnect, \
     <//js.hsforms.net>;rel=preconnect, \
     </public/css/seldon.css>;rel=preload;as=style, \
