--- a/netlify.toml
+++ b/netlify.toml
@@ -23,6 +23,7 @@
     <//s.ytimg.com>;rel=preconnect, \
     <//connect.facebook.net>;rel=preconnect, \
     <//www.googletagmanager.com>;rel=preconnect, \
+    <//www.google-analytics.com>;rel=preconnect, \
     <//fast.wistia.com>;rel=preconnect, \
     <//js.hsforms.net>;rel=preconnect, \
     </public/css/seldon.css>;rel=preload;as=style, \
