Content updates after initial review
Items checked off in Invision appear here.

--- a/data/footer_misc.yaml
+++ b/data/footer_misc.yaml
@@ -3,14 +3,14 @@
     url: "/"
     desc: "Datica Health, Inc main page"
 -
-    title: "(888) 377-3184"
-    url: "tel:8883773184"
+    title: "(888) 988-5202"
+    url: "tel:8889885202"
     desc: "Tap to call us"
 -
     title: "hello@datica.com"
     url: "mailto:hello@datica.com"
     desc: "Email us today"
 -
-    title: "10 East Doty St. Suite 800, Madison, WI 53703"
-    url: "https://goo.gl/maps/QkWQAXqQ79L2"
-    desc: "See our location in Google maps"
+    title: "510 N 1st Ave, Suite 605, Minneapolis, MN 55403"
+    url: "https://goo.gl/maps/bMkCoJFPDzRgSHKS8"
+    desc: "Get directions in Maps"
