For the want of a comma

--- a/data/footer_misc.yaml
+++ b/data/footer_misc.yaml
@@ -1,7 +1,7 @@
 -
     title: "&copy; Datica Health LLC."
     url: "/"
-    desc: "Datica Health LLC main page"
+    desc: "Datica Health, LLC main page"
 -
     title: "(888) 988-5202"
     url: "tel:8889885202"
