--- a/package.json
+++ b/package.json
@@ -33,18 +33,14 @@
     "private": true
   },
   "dependencies": {
-    "animejs": "^1.1.3",
     "foundation-sites": "6.4.3",
-    "motion-ui": "~1.2.3",
-    "svg-injector": "^1.1.3",
-    "jquery": "~3.2.1"
+    "svg-injector": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.26.5",
     "glob": "^7.1.1",
-    "hoek": "^5.0.3",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.12.0",
     "onchange": "^3.2.1",
     "parallelshell": "^2.0.0",
     "uglify-js": "^2.8.0"
