Removing Azure contact page

--- a/netlify.toml
+++ b/netlify.toml
@@ -1756,7 +1756,12 @@
 
 [[redirects]]
   from = "/azure"
-  to = "/contact/azure"
+  to = "/contact/"
+  status = 301
+
+[[redirects]]
+  from = "/contact/azure"
+  to = "/contact/"
   status = 301
 
 [[redirects]]
