--- a/netlify.toml
+++ b/netlify.toml
@@ -1730,6 +1730,11 @@
   status = 301
 
 [[redirects]]
+  from = "/webinars/see-datica-ccms-live"
+  to = "/webinars"
+  status = 410
+
+[[redirects]]
   from = "/learn/business-associates-agreements"
   to = "/academy/business-associate-agreements"
   status = 301
